[package]
name = "tgcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.4"
tokio = { version = "1", features = ["signal", "full"] }
reqwest = { version = "0.12.2", default-features = false, features = [
  "rustls-tls",
] }
regex = "1.10.2"
once_cell = "1.18.0"
clap = { version = "4.5.4", features = ["derive"] }
